--- a/C0721G2-livestock-farm-FE/src/app/component/employee/employee-create/employee-create.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/employee/employee-create/employee-create.component.html
@@ -7,13 +7,13 @@
         </div>
         <div class="card mb-4">
           <div class="card-header pb-0">
-            <h6>Thêm mới nhân viên</h6>
+            <h3>Thêm mới nhân viên</h3>
             <p class="text-success"></p>
           </div>
           <form class="row g-3 needs-validation m-3" method="post" [formGroup]="employeeForm" (ngSubmit)="onSubmit()">
             <div class="col-md-4 col-sm-12 position-relative">
               <label for="name" class="form-label">Họ và tên<span
-                style="color: black">   (</span><span
+                style="color: black">(</span><span
                 style="color: red">*</span><span
                 style="color: black">)</span></label>
               <input type="text" class="form-control" id="name" name="name" formControlName="name"
@@ -39,8 +39,10 @@
               <input type="date" class="form-control" id="date" name="date" formControlName="dateOfBirth">
               <small style="color: red"
                      *ngIf="dateOfBirth.hasError('required') && (dateOfBirth.dirty || dateOfBirth.touched)">Ngày sinh
-                không được để
-                trống.</small>
+                không được để trống.</small>
+              <small style="color: red"
+                     *ngIf="dateOfBirth.hasError('checkAge') && (dateOfBirth.dirty || dateOfBirth.touched)">Ngày sinh từ
+                18 tuổi đến 65 tuổi.</small>
             </div>
 
 
@@ -69,28 +71,29 @@
                      placeholder="Nhập số CMND/CCCD">
               <small style="color: red"
                      *ngIf="idCard.hasError('required') && (idCard.dirty || idCard.touched)">Số CMND/CCCD không được để
-                trống.</small> <br>
+                trống.</small>
               <small style="color: red"
-                     *ngIf="idCard.hasError('pattern') && (idCard.dirty || idCard.touched)">Số CMND phải có định dạng 9
-                số và CCCD phải có định dạng 12 số.</small>
+                     *ngIf="idCard.hasError('pattern') && (idCard.dirty || idCard.touched)">Số CMND định dạng 9
+                số và CCCD định dạng 12 số.</small>
             </div>
 
 
             <div class="col-md-4 col-sm-12 position-relative">
               <label for="1" class="form-label">Giới tính<span
-                style="color: black">   (</span><span
+                style="color: black">(</span><span
                 style="color: red">*</span><span
                 style="color: black">)</span></label>
               <div class="btn-group col-md-12 col-sm-12 position-relative" id="1" role="group"
                    aria-label="Basic radio toggle button group">
-                <input type="radio" class="btn-check" id="gender"
+                <input type="radio" class="form-check-input" id="gender"
                        [value]="1" autocomplete="off" formControlName="gender" name="gender"
                        checked>
-                <label class="btn btn-outline-success" for="gender">Nam</label>
-
-                <input type="radio" class="btn-check" name="gender" id="gender1"
-                       autocomplete="off" formControlName="gender" [value]="0">
-                <label class="btn btn-outline-success" for="gender1">Nữ</label>
+                <label class="px-2">Nam</label>
+                <div class="px-5">
+                  <input type="radio" class="form-check-input" name="gender" id="gender1"
+                         autocomplete="off" formControlName="gender" [value]="0">
+                  <label class="px-2">Nữ</label>
+                </div>
               </div>
               <!--              <small style="color: red">Giới tính phải được chọn.</small>-->
             </div>
@@ -102,14 +105,15 @@
                 style="color: black">)</span></label>
               <div class="btn-group col-md-12 col-sm-12 position-relative" id="2" role="group"
                    aria-label="Basic radio toggle button group">
-                <input type="radio" class="btn-check" id="btnradio3"
+                <input type="radio" class="form-check-input" id="btnradio3"
                        autocomplete="off"
                        formControlName="roleDTO" name="roleDTO" [value]="1">
-                <label class="btn btn-outline-success" for="btnradio3">Admin</label>
-
-                <input type="radio" class="btn-check" name="btnradio2" id="btnradio4" checked
+                <label class="px-2">Admin</label>
+                <div class="px-5">
+                <input type="radio" class="form-check-input" name="btnradio2" id="btnradio4" checked
                        autocomplete="off" [value]="2" formControlName="roleDTO" name="roleDTO">
-                <label class="btn btn-outline-success" for="btnradio4">Nhân viên</label>
+                <label class="px-2">Nhân viên</label>
+                </div>
               </div>
               <!--              <small style="color: red">Phân quyền phải được chọn.</small>-->
             </div>
@@ -123,10 +127,13 @@
                      placeholder="Nhập email">
               <small style="color: red"
                      *ngIf="email.hasError('required') && (email.dirty || email.touched)">Email không được để
-                trống.</small><br>
+                trống.</small>
               <small style="color: red"
                      *ngIf="email.hasError('pattern') && (email.dirty || email.touched)">Email không đúng định
                 dạng.</small>
+              <small style="color: red"
+                *ngIf="validateErrorEmail!==''">
+                {{validateErrorEmail}}</small>
             </div>
 
             <div class="col-md-6 col-sm-12 position-relative">
@@ -141,20 +148,15 @@
                 Địa chỉ không được để trống.</small>
             </div>
 
-            <div class="col-md-6 position-relative field">
-              <label for="files" class="form-label">Ảnh cá nhân</label>
-              <input type="file" multiple="multiple" class="form-control" id="files" formControlName="image" required
-                     name="files[]" (change)="detectFiles($event)" accept="image/png, image/gif, image/jpeg">
-              <small *ngIf="imgMess"
-                     class="fst-italic" style="color: red"></small>
-              <div class="text-center row mt-4">
-                <ng-container *ngFor="let item of urls">
-                  <div class="col-md-2">
-                    <img [src]="item" width="200px" height=200px"><img>
-                  </div>
-                </ng-container>
+            <div class="mt-5 row form-group">
+              <div class="col-2" style="font-weight: bold;font-size: 17px">
+                <label for="img-avatar" class="mr-3">Ảnh cá nhân<span style="color: red">*</span></label>
+              </div>
+              <div class="col-10">
+                <input id="img-avatar" type="file" class="form-control-file" (change)="showPreview($event)">
               </div>
             </div>
+
 
             <div class=" btn-toolbar mb-3 d-flex flex-row-reverse bd-highlight" role="toolbar"
                  aria-label="Toolbar with button groups">
@@ -169,15 +171,15 @@
               </div>
             </div>
 
-<!--            <div class="btn-toolbar mb-3 justify-content-md-center bd-highlight" role="toolbar"-->
-<!--                 aria-label="Toolbar with button groups">-->
-<!--              <div class="btn-group me-2">-->
-<!--                <button class="btn btn-secondary" type="submit">Xóa</button>-->
-<!--              </div>-->
-<!--              <div class="btn-group me-2">-->
-<!--                <button class="btn btn-success" type="submit">Lưu</button>-->
-<!--              </div>-->
-<!--            </div>-->
+            <!--            <div class="btn-toolbar mb-3 justify-content-md-center bd-highlight" role="toolbar"-->
+            <!--                 aria-label="Toolbar with button groups">-->
+            <!--              <div class="btn-group me-2">-->
+            <!--                <button class="btn btn-secondary" type="submit">Xóa</button>-->
+            <!--              </div>-->
+            <!--              <div class="btn-group me-2">-->
+            <!--                <button class="btn btn-success" type="submit">Lưu</button>-->
+            <!--              </div>-->
+            <!--            </div>-->
             <div>
               <i><span style="color: red">Lưu ý:</span><span style="color: black">  Những thông tin (</span><span
                 style="color: red">*</span><span style="color: black">) bắt buộc nhập.</span></i>
@@ -191,29 +193,29 @@
 
 </main>
 
-<div *ngIf="validateErrorEmail!==''" class="text-center row col-12 fs-5">
-  <h4 class="text-danger fst-italic ">{{validateErrorEmail}}</h4>
+<!--<div *ngIf="validateErrorEmail!==''" class="text-center row col-12 fs-5">-->
+<!--  <h4 class="text-danger fst-italic ">{{validateErrorEmail}}</h4>-->
+<!--</div>-->
 
   <!--<small style="color: red"-->
   <!--       *ngIf="validateErrorEmail && (email.dirty || email.touched)">Email đã có người sử dụng</small>-->
 
-  <!--<body>-->
-  <!--&lt;!&ndash;Modal của thịnh&ndash;&gt;-->
-  <!--<div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">-->
-  <!--  <div class="modal-dialog">-->
-  <!--    <div class="modal-content">-->
-  <!--      <div class="modal-header">-->
-  <!--        <h5 class="modal-title" id="exampleModalLabel">Thông báo</h5>-->
-  <!--        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
-  <!--      </div>-->
-  <!--      <div class="modal-body">-->
-  <!--        Thêm mới nhân viên thành công-->
-  <!--      </div>-->
-  <!--      <div class="modal-footer">-->
-  <!--        &lt;!&ndash;        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="closeModal()">Đóng</button>&ndash;&gt;-->
-  <!--        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="submitModal()">Xác nhận</button>-->
+  <!--  <body>-->
+  <!--  <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">-->
+  <!--    <div class="modal-dialog">-->
+  <!--      <div class="modal-content">-->
+  <!--        <div class="modal-header">-->
+  <!--          <h5 class="modal-title" id="exampleModalLabel">Thông báo</h5>-->
+  <!--          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
+  <!--        </div>-->
+  <!--        <div class="modal-body">-->
+  <!--          Thêm mới nhân viên thành công-->
+  <!--        </div>-->
+  <!--        <div class="modal-footer">-->
+  <!--          &lt;!&ndash;        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="closeModal()">Đóng</button>&ndash;&gt;-->
+  <!--          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Xác nhận</button>-->
+  <!--        </div>-->
   <!--      </div>-->
   <!--    </div>-->
   <!--  </div>-->
-  <!--</div>-->
-  <!--</body>-->
+  <!--  </body>-->
