--- a/C0721G2-livestock-farm-FE/src/app/component/employee/employee-edit/employee-edit.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/employee/employee-edit/employee-edit.component.html
@@ -25,14 +25,16 @@
                      *ngIf="name.hasError('required') && (name.dirty || name.touched)">Họ và tên không được để
                 trống.</small>
               <small style="color: red"
-                     *ngIf="name.hasError('pattern')&& (name.dirty || name.touched)">Họ và tên không đúng định dạng.</small>
+                     *ngIf="name.hasError('pattern')&& (name.dirty || name.touched)">Họ và tên không đúng định
+                dạng.</small>
             </div>
             <div class="col-md-4 col-sm-12 position-relative">
               <label for="date" class="form-label">Ngày sinh<span
                 style="color: black">   (</span><span
                 style="color: red">*</span><span
                 style="color: black">)</span></label>
-              <input type="date" class="form-control" id="date" name="date" formControlName="dateOfBirth" [ngModel]="employee.dateOfBirth">
+              <input type="date" class="form-control" id="date" name="date" formControlName="dateOfBirth"
+                     [ngModel]="employee.dateOfBirth">
               <small style="color: red"
                      *ngIf="dateOfBirth.hasError('required') && (dateOfBirth.dirty || dateOfBirth.touched)">Ngày sinh
                 không được để
@@ -66,7 +68,8 @@
                      *ngIf="idCard.hasError('required') && (idCard.dirty || idCard.touched)">Số CMND/CCCD không được để
                 trống.</small> <br>
               <small style="color: red"
-                     *ngIf="idCard.hasError('pattern') && (idCard.dirty || idCard.touched)">Số CMND phải có định dạng 9 số và CCCD phải có định dạng 12 số.</small>
+                     *ngIf="idCard.hasError('pattern') && (idCard.dirty || idCard.touched)">Số CMND định dạng 9
+                số và CCCD định dạng 12 số.</small>
             </div>
 
             <div class="col-md-4 position-relative">
@@ -77,14 +80,15 @@
 
               <div class="btn-group col-md-12 col-sm-12 position-relative" id="1" role="group"
                    aria-label="Basic radio toggle button group">
-                <input type="radio" class="btn-check" id="gender" [ngModel]="employee.gender"
+                <input type="radio" class="form-check-input" id="gender" [ngModel]="employee.gender"
                        [value]="1" autocomplete="off" formControlName="gender" name="gender"
                        checked>
-                <label class="btn btn-outline-success" for="gender">Nam</label>
-
-                <input type="radio" class="btn-check" name="gender" id="gender1"
-                       autocomplete="off" formControlName="gender" [value]="0">
-                <label class="btn btn-outline-success" for="gender1">Nữ</label>
+                <label class="px-2">Nam</label>
+                <div class="px-5">
+                  <input type="radio" class="form-check-input" name="gender" id="gender1"
+                         autocomplete="off" formControlName="gender" [value]="0">
+                  <label class="px-2">Nữ</label>
+                </div>
               </div>
             </div>
 
@@ -95,13 +99,15 @@
                 style="color: black">)</span></label>
               <div class="btn-group col-md-12 col-sm-12 position-relative" id="2" role="group"
                    aria-label="Basic radio toggle button group">
-                <input type="radio" class="btn-check" id="btnradio3"
-                       autocomplete="off" formControlName="roleDTO" name="roleDTO" [value]="1" [ngModel]="employee.roleDTO">
-                <label class="btn btn-outline-success" for="btnradio3">Admin</label>
-
-                <input type="radio" class="btn-check" id="btnradio4"
-                       autocomplete="off" [value]="2" formControlName="roleDTO" name="roleDTO">
-                <label class="btn btn-outline-success" for="btnradio4">Nhân viên</label>
+                <input type="radio" class="form-check-input" id="btnradio3"
+                       autocomplete="off" formControlName="roleDTO" name="roleDTO" [value]="1"
+                       [ngModel]="employee.roleDTO">
+                <label class="px-2">Admin</label>
+                <div class="px-5">
+                  <input type="radio" class="form-check-input" id="btnradio4"
+                         autocomplete="off" [value]="2" formControlName="roleDTO" name="roleDTO">
+                  <label class="px-2">Nhân viên</label>
+                </div>
               </div>
             </div>
 
@@ -132,20 +138,31 @@
                 Địa chỉ không được để trống.</small>
             </div>
 
-            <div class="col-md-6 position-relative field">
-              <label for="files" class="form-label">Ảnh cá nhân</label>
-              <input type="file" multiple="multiple" class="form-control" id="files" formControlName="image" required
-                     name="files[]" (change)="detectFiles($event)" accept="image/png, image/gif, image/jpeg">
-              <small *ngIf="imgMess"
-                     class="fst-italic" style="color: red"></small>
-              <div class="text-center row mt-4">
-                <ng-container *ngFor="let item of urls">
-                  <div class="col-md-2">
-                    <img [src]="item" width="200px" height=200px"><img>
-                  </div>
-                </ng-container>
+
+            <div class="col-md-12 position-relative field">
+              <label class="form-label">Ảnh cá nhân</label>
+              <img class="form-control" src="{{employee.image}}" style="width: 20%">
+            </div>
+            <div class="mt-5 row form-group">
+              <div class="col-10">
+                <input id="img-avatar" type="file" class="form-control-file" (change)="showPreview($event)">
               </div>
             </div>
+
+            <!--            <div class="col-md-6 position-relative field">-->
+            <!--              <label for="files" class="form-label">Ảnh cá nhân</label>-->
+            <!--              <input type="file" multiple="multiple" class="form-control" id="files" formControlName="image" required-->
+            <!--                     name="files[]" (change)="detectFiles($event)" accept="image/png, image/gif, image/jpeg">-->
+            <!--              <small *ngIf="imgMess"-->
+            <!--                     class="fst-italic" style="color: red"></small>-->
+            <!--              <div class="text-center row mt-4">-->
+            <!--                <ng-container *ngFor="let item of urls">-->
+            <!--                  <div class="col-md-2">-->
+            <!--                    <img [src]="item" width="200px" height=200px"><img>-->
+            <!--                  </div>-->
+            <!--                </ng-container>-->
+            <!--              </div>-->
+            <!--            </div>-->
 
             <div class=" btn-toolbar mb-3  d-flex flex-row-reverse bd-highlight" role="toolbar"
                  aria-label="Toolbar with button groups">
@@ -159,15 +176,15 @@
               </div>
             </div>
 
-<!--            <div class="btn-toolbar mb-3 justify-content-md-center bd-highlight" role="toolbar"-->
-<!--                 aria-label="Toolbar with button groups">-->
-<!--              <div class="btn-group me-2">-->
-<!--                <button class="btn btn-secondary" type="submit">Xóa</button>-->
-<!--              </div>-->
-<!--              <div class="btn-group me-2">-->
-<!--                <button class="btn btn-success" type="submit">Lưu</button>-->
-<!--              </div>-->
-<!--            </div>-->
+            <!--            <div class="btn-toolbar mb-3 justify-content-md-center bd-highlight" role="toolbar"-->
+            <!--                 aria-label="Toolbar with button groups">-->
+            <!--              <div class="btn-group me-2">-->
+            <!--                <button class="btn btn-secondary" type="submit">Xóa</button>-->
+            <!--              </div>-->
+            <!--              <div class="btn-group me-2">-->
+            <!--                <button class="btn btn-success" type="submit">Lưu</button>-->
+            <!--              </div>-->
+            <!--            </div>-->
             <div>
               <i><span style="color: red">Lưu ý:</span><span style="color: black">  Những thông tin (</span><span
                 style="color: red">*</span><span style="color: black">) bắt buộc nhập.</span></i>
@@ -192,7 +209,7 @@
       </div>
       <div class="modal-footer">
         <!--        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="closeModal()">Đóng</button>-->
-        <button type="button" class="btn btn-primary"  data-bs-dismiss="modal" (click)="submitModal()">Xác nhận</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Xác nhận</button>
       </div>
     </div>
   </div>
