--- a/C0721G2-livestock-farm-FE/src/app/component/buy/buy-create/buy-create.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/buy/buy-create/buy-create.component.html
@@ -75,11 +75,12 @@
     </tr>
     </tbody>
   </table>
+
   <div class="modal-footer btn-success">
     <button type="button" class="btn btn-secondary"
             data-bs-dismiss="modal" (click)=" onNoClick()">Đóng
     </button>
-    <button type="submit" class="btn text-light bg-warning">Gửi</button>
+    <button type="submit" class="btn text-light bg-warning"  [disabled]="buyIndividualForm.invalid">Gửi</button>
   </div>
 
 </form>
