--- a/C0721G2-livestock-farm-FE/src/app/component/cages/cages-create/cages-create.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/cages/cages-create/cages-create.component.html
@@ -1,26 +1,19 @@
 <head>
   <title>Thêm mới chuồng nuôi</title>
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <script src="/dist/scripts.min.js"></script>
   <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script src="//www.danstools.com/js/forum.js"></script>
-<!--  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>-->
-<!--  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
-<!--  booostrap ser2-->
-<!--  <div>-->
-<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
-<!--    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>-->
-<!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
-<!--  </div>-->
 </head>
 <body>
 <!------ Include the above in your HEAD tag ---------->
 <div class="container register">
   <div class="row">
     <div class="col-md-3 register-left">
-      <img src="https://nongnghiepweb.files.wordpress.com/2017/04/cropped-leave-icon-png-106801.png" alt=""/>
+      <img  src="https://fv9-2.failiem.lv/thumb_show.php?i=jp53m5a92&view" alt="" style="width: 100%"/>
+<!--      <img src="https://nongnghiepweb.files.wordpress.com/2017/04/cropped-leave-icon-png-106801.png" alt=""/>-->
+
       <h3>Chào mừng đến với trang trại của chúng tôi</h3>
       <p></p>
     </div>
@@ -46,47 +39,53 @@
           <h3 class="register-heading">Vui lòng nhập biểu mẫu bên dưới để tạo chuồng nuôi.</h3>
           <form [formGroup]="createCage" (ngSubmit)="submit()">
             <div class="row register-form">
-              <div class="col-md-6 ">
+
+              <div class="col-md-6">
                 <div class="form-group">
                   <label>Mã chuồng nuôi.</label>
+                  <!--                  <table>-->
+
+                  <!--                  </table>-->
                   <input type="text" class="form-control" formControlName="id" required/>
-                  <div class="error alert-danger"
-                       *ngIf="createCage.controls.id.dirty && createCage.controls.id.hasError('pattern') ">
-                    Mã tạo chuồng có định dạng CA-xxxx
-                  </div>
-                  <div class="alert-danger" *ngIf="showErrorCage">{{showErrorCage}}</div>
-                  <div class="error alert-danger"
-                       *ngIf="createCage.controls.id.dirty && createCage.controls.id.hasError('required') ">
-                    Không được bỏ trống
+                  <div>
+                  <span class="error error-text"
+                        *ngIf="createCage.controls.id.dirty && createCage.controls.id.hasError('pattern') ">
+                    Mã tạo chuồng có định dạng CA-xxxx.
+                  </span>
+                    <span class="error-text" *ngIf="showErrorCage">{{showErrorCage}}</span>
+                    <span class="error error-text"
+                          *ngIf="createCage.controls.id.dirty && createCage.controls.id.hasError('required') ">
+                    Không được bỏ trống.
+                  </span>
                   </div>
                 </div>
                 <div class="form-group">
                   <label>Loại chuồng nuôi.</label>
-                                    <div class="error alert-danger"
-                                         *ngIf="createCage.controls.typeOfCage.dirty && createCage.controls.typeOfCage.hasError('required') ">
-                                      Không được bỏ trống
-                                    </div>
-                  <select class="custom-select mt-1" formControlName="typeOfCage" name="typeOfCage"
+                  <select class="custom-select mt-0" formControlName="typeOfCage" name="typeOfCage"
                           aria-label="Default select example">
                     <!--                    <option selected>Vui lòng chọn loại chuồng</option>-->
                     <!--                    <option [ngValue]="null">Vui lòng chọn loại chuồng</option>-->
                     <option [ngValue]=null>Vui lòng chọn loại chuồng</option>
                     <option *ngFor="let item of typeOfCage" [ngValue]="item">{{item.name}}</option>
                   </select>
+                  <div class="error error-text"
+                       *ngIf="createCage.controls.typeOfCage.dirty && createCage.controls.typeOfCage.hasError('required') ">
+                    Không được bỏ trống
+                  </div>
                 </div>
                 <div class="form-group">
                   <label>Mã nhân viên.</label>
-                  <!--                  <div class="error alert-danger"-->
+                  <!--                  <div class="error error-text"-->
                   <!--                       *ngIf="createCage.controls.id.dirty && createCage.controls.id.hasError('required') ">-->
                   <!--                    Không được bỏ trống-->
                   <!--                  </div>-->
                   <input placeholder="NV-xxxx" type="text" class="form-control" formControlName="employee"/>
-                  <div *ngIf="employeeExist" class="error alert-danger">Tên nhân viên không tồn tại</div>
-                  <div class="error alert-danger"
+                  <div *ngIf="employeeExist" class="error error-text">Tên nhân viên không tồn tại</div>
+                  <div class="error error-text"
                        *ngIf="createCage.controls.employee.dirty && createCage.controls.employee.hasError('required') ">
                     Không được bỏ trống
                   </div>
-                  <div class="error alert-danger"
+                  <div class="error error-text"
                        *ngIf="createCage.controls.employee.dirty && createCage.controls.employee.hasError('pattern') ">
                     Định dạng là NV-xxxx
                   </div>
@@ -95,29 +94,44 @@
               <div class="col-md-6">
                 <div class="form-group">
                   <label>Ngày tạo chuồng.</label>
-                  <div class="error alert-danger"
+                  <input type="date"  class="form-control" formControlName="openDate"/>
+                  <div class="error error-text"
                        *ngIf="createCage.controls.openDate.dirty && createCage.controls.openDate.hasError('required') ">
-                    Không được bỏ trống
+                    Không được bỏ trống.
                   </div>
-                  <input type="date" class="form-control" formControlName="openDate"/>
                 </div>
                 <div class="form-group">
                   <label>Ngày đóng chuồng.</label>
                   <input type="date" class="form-control" formControlName="closeDate"/>
+                  <div class="error error-text"
+                       *ngIf="createCage.controls.closeDate.dirty && createCage.controls.closeDate.hasError('required') ">
+                    Không được bỏ trống.
+                  </div>
                 </div>
                 <div class="form-group">
                   <label>Số lượng cá thể.</label>
                   <input type="text" class="form-control" formControlName="quantity"/>
-                  <div class="error alert-danger"
+                  <div class="error error-text"
                        *ngIf="createCage.controls.quantity.dirty && createCage.controls.quantity.hasError('required')">
-                    Không được bỏ trống
+                    Không được bỏ trống.
                   </div>
-                  <div class="error alert-danger"
+                  <div class="error error-text"
+                       *ngIf="createCage.controls.quantity.dirty && createCage.controls.quantity.hasError('max')">
+                    Số lượng tối đa là 100.
+                  </div>
+                  <div class="error error-text"
                        *ngIf="createCage.controls.quantity.dirty && createCage.controls.quantity.hasError('pattern') ">
                     Nhập chưa đúng định dạng.
                   </div>
                 </div>
-                <button type="submit" class=" btn btnRegister" [disabled]="createCage.invalid">Đồng ý</button>
+                <button data-bs-toggle="modal" data-bs-target="#exampleModal"
+                        type="submit" class=" btn btnRegister" [disabled]="createCage.invalid">Đồng ý
+                </button>
+                <a class="btn btnBack" style="margin-right: 0px" [routerLink]="['/cage/list']">Quay lại
+                </a>
+<!--                <button class="btn btnBack" [routerLink]="['/cage/list']"-->
+<!--                        style="margin: 30px 0px 0px 30px; padding-left: 10px">Quay lại-->
+<!--                </button>-->
               </div>
             </div>
           </form>
@@ -127,4 +141,28 @@
   </div>
 </div>
 </body>
+
+<!-- Button trigger modal -->
+<!--<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">-->
+<!--  Launch demo modal-->
+<!--</button>-->
+
+<!-- Modal -->
+<div *ngIf="showAlert" class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Tạo chuồng thành công</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Tạo chuồng thành công
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
