--- a/C0721G2-livestock-farm-FE/src/app/component/cages/cages-edit/cages-edit.component.css
+++ b/C0721G2-livestock-farm-FE/src/app/component/cages/cages-edit/cages-edit.component.css
@@ -1,6 +1,6 @@
 .register{
   background: -webkit-linear-gradient(left, burlywood,burlywood );
-  margin-top: 3%;
+  margin-top: 4%;
   padding: 3%;
 }
 .register-left{
@@ -94,4 +94,18 @@
   margin-top: 8%;
   margin-bottom: -15%;
   color: #495057;
+}
+.error-text{
+  color: red;
+}
+.btnBack{
+  margin-top: 10%;
+  border: none;
+  border-radius: 1.5rem;
+  padding: 2%;
+  background: #383d41;
+  color: #fff;
+  font-weight: 600;
+  width: 49%;
+  cursor: pointer;
 }
