--- a/C0721G2-livestock-farm-FE/src/app/component/share/about-us/about-us.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/share/about-us/about-us.component.html
@@ -1,9 +1,10 @@
-<main class="container-fluid mt-4" style="padding-top: 4rem">
+<main class="" style="padding-top: 5rem">
   <div>
-    <img src="https://cdn.bigdutchman.com/fileadmin/content/pig/banner/Schweinehaltung-pig-production-Referenzen-Big-Dutchman.jpg">
+    <img src="https://cdn.bigdutchman.com/fileadmin/content/pig/banner/Schweinehaltung-pig-production-Referenzen-Big-Dutchman.jpg"
+    style="width: 100%">
   </div>
   <div class="row">
-    <div class="col-md-8 m-auto justify-content-center bg-light">
+    <div class="col-md-9 m-auto justify-content-center bg-light">
       <div class="">
         <div class="card-body">
           <p class=" fs-2 fw-bold text-success text-center">Hưng Thịnh Farm</p>
