--- a/C0721G2-livestock-farm-FE/src/app/component/news/news-detail/news-detail.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/news/news-detail/news-detail.component.html
@@ -1,15 +1,25 @@
-<main class="container-fluid bg-white" style="padding-top: 4rem">
+<main class="container-fluid bg-white" style="padding-top: 5rem">
   <div class="row">
     <div class="col-md-9 m-auto justify-content-center bg-white ">
-      <!--                Đề mục-->
-      <div class="">
-        <!--        <p>{{news.title}}</p>-->
+      <div style="background-color: lightseagreen; font-size: 100%" class="text-light">
+        <div class="mt-1 mb-1">
+             <span class="mt-2 mb-2">
+            <a class="text-decoration-none text-light  btn btn-link"
+            >Tin tức</a></span>
+          <span class="mt-2 mb-2"> |
+            <a class="text-decoration-none text-light  btn btn-link ">{{news.typeOfNews.name}}</a></span>
+          <span class="float-end mt-2 mb-2 me-2 text-light "
+                style="text-align: center">{{time | date:'dd/MM/yyyy'}}</span>
+        </div>
+        <div class="float-end mt-3 mb-2 me-2" *ngIf="check==true">
+          <a class="btn btn-sm btn-warning ms-4">Sửa</a>
+          <a class="btn btn-sm btn-danger ms-2">Xóa</a>
+        </div>
       </div>
-      <!--                Tiêu đề-->
-      <div>
-        <p class="fs-4 fw-bold">{{news.title}}</p>
+      <div class="mt-3">
+        <p class="fs-4 fw-bold" style="padding: 0px; margin: 0px">{{news.title}}</p>
         <!--                Ngày đăng-->
-        <p class="fs-6 mb-2">{{news.postDate | date : "dd-MM-yyyy"}}</p>
+        <p class="mb-2" style="font-size: 80% ">{{news.postDate | date : "dd/MM/yyyy"}}</p>
         <!--                    Nội dung-->
         <div class="text-center mb-2">
           <img src="{{img}}" width="90%">
@@ -19,13 +29,7 @@
       <!--                Tác giả-->
       <div class="float-end">
         <p class="fs-5 fw-bold">{{news.employee.name}}</p>
-        <div class="float-end">
-        <a class="btn btn-sm btn-warning ms-4">Sửa</a>
-        <a class="btn btn-sm btn-danger ms-2">Xóa</a>
-      </div>
-
       </div>
     </div>
   </div>
-
 </main>
