--- a/C0721G2-livestock-farm-FE/src/app/component/share/home/home.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/share/home/home.component.html
@@ -1,4 +1,4 @@
-<main style="padding-top: 4rem" class="container-fluid   bg-light">
+<main style="padding-top: 5rem" class="container-fluid   bg-light">
   <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"
@@ -194,7 +194,7 @@
           </div>
         </div>
       </div>
-      <div class="row mt-4">
+      <div class="row mt-4 mb-4">
         <div class="col-md-6 col-lg-6 col-sm-12">
           <div class="card">
             <div class="card-header text-center">
@@ -216,7 +216,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-6 col-sm-12">
+        <div class="col-md-6 col-lg-6 col-sm-12 mb-4">
           <div id="carouselExampleControl" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -241,8 +241,6 @@
           </div>
         </div>
       </div>
-
-
     </div>
   </div>
 </main>
