--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-create/individual-create.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-create/individual-create.component.html
@@ -1,8 +1,9 @@
 <span [class.alert-danger]="message" (message)="message" [textContent]="message">{{'message'}}</span><!--thẻ modal-->
 <br>
 <!--form nhập-->
-<button type="button" class="btn btn-success font-weight-bold me-2" data-bs-toggle="modal" data-bs-target="#myModalCreate">
-  Thêm một
+<button type="button" class="btn btn-success font-weight-bold me-2" data-bs-toggle="modal"
+        data-bs-target="#myModalCreate">
+  Thêm mới
 </button>
 
 <div class="modal" id="myModalCreate" style="text-align: left">
@@ -17,25 +18,17 @@
         <div class="modal-body">
           <form class="form-group row g-3 needs-validation m-3" method="post" [formGroup]="individualForm"
                 (ngSubmit)="onSubmit()">
-<!--            <div class="col-md-6 position-relative">-->
-<!--              <label for="code" class="form-label">Mã cá thể <span-->
-<!--                style="color: red">(*)</span></label>-->
-<!--              <input type="text" id="code" class="form-control" formControlName="id">-->
-<!--              <small class="fst-italic" style="color: red" *ngIf="individualForm.controls.id.dirty &&-->
-<!--              individualForm.controls.id.hasError('required')">Mã cá thể không được để trống</small>-->
-<!--              <small class="fst-italic" style="color: red" *ngIf="individualForm.controls.id.dirty &&-->
-<!--              individualForm.controls.id.hasError('required')">Phải đúng định dạng IN-XXXX</small>-->
-<!--            </div>-->
             <div class="col-md-6 position-relative">
               <label class="form-label">Mã chuồng nuôi <span
                 style="color: red">(*)</span></label>
               <select id="status" class="form-select" aria-label="Default select example"
                       formControlName="cage" name="positionDTO">
                 <option [ngValue]="null">--Chọn--</option>
-                <option *ngFor="let item of cage"
+                <option *ngFor="let item of cagelist"
                         [ngValue]="item">{{item.id}}</option>
               </select>
             </div>
+
             <div class="col-md-6 position-relative">
               <label for="datein" class="form-label">Ngày vào chuồng <span
                 style="color: red">(*)</span></label>
@@ -43,7 +36,6 @@
               <small class="fst-italic" style="color: red" *ngIf="individualForm.controls.dateIn.dirty &&
               individualForm.controls.dateIn.hasError('required')">Ngày vào chuồng không được để
                 trống</small>
-              <!--              <small class="fst-italic" style="color: red">không được là ngày quá khứ</small>-->
             </div>
 
             <div class="col-md-6 position-relative ">
@@ -53,7 +45,6 @@
               <small class="fst-italic" style="color: red" *ngIf="individualForm.controls.dateOut.dirty &&
               individualForm.controls.dateOut.hasError('required')">Ngày xuất chuồng không được để
                 trống</small>
-              <!--              <small class="fst-italic" style="color: red">không được là ngày quá khứ</small>-->
             </div>
 
             <div class="col-md-6 position-relative ">
@@ -63,27 +54,23 @@
               <select id="position-relative" class="form-control" aria-label="Default select example"
                       formControlName="status">
                 <option Value="null">Lựa chọn trạng thái</option>
-                <option value="0">Bệnh</option>
-                <!--                <option value="2">Đang Nuôi</option>-->
-                <option value="1">Khỏe mạnh</option>
-                <!--                <option value="4">Chuẩn bị xuất</option>-->
-                <!--                <option value="5">Đã xuất</option>-->
+                <option [value]="0">Bệnh</option>
+                <option [value]="1">Khỏe mạnh</option>
               </select>
             </div>
 
             <div class="col-md-6 position-relative">
               <label for="weight" class="form-label">Cân nặng/Kg <span
                 style="color: red">(*)</span></label>
-              <input type="number" id="weight" class="form-control" formControlName="weight">
-              <small class="fst-italic" style="color: red" *ngIf="individualForm.controls.dateOut.dirty &&
+              <input type="number" id="weight" class="form-control" formControlName="weight" min="1"
+                     placeholder="tối đa 200Kg">
+              <small class="fst-italic" style="color: red" *ngIf="individualForm.controls.weight.dirty &&
               individualForm.controls.weight.hasError('required')">Cân nặng không được để trống</small>
-              <!--              <small class="fst-italic" style="color: red">không được là số âm, chỉ được nhập-->
-              <!--                số</small>-->
+              <small class="fst-italic" style="color: red" *ngIf="individualForm.controls.weight.dirty &&
+              individualForm.controls.weight.hasError('min')">không được là số âm, nhỏ nhất là 1</small>
             </div>
-            <!--            <div class="col-md-12 position-relative">-->
-            <!--              <label for="note" class="form-label">Ghi chú</label>-->
-            <!--              <textarea type="text" class="form-control" id="note"></textarea>-->
-            <!--            </div>-->
+            <input hidden type="button" class="btn btn-success" formControlName="deleted" [value]="0">
+
             <br>
             <div class="modal-footer col-12">
               <div class="btn-toolbar mb-3 d-flex flex-row-reverse bd-highlight" role="toolbar"
@@ -99,7 +86,6 @@
                             [disabled]="individualForm.invalid">Thêm mới
                     </button>
                   </div>
-                  <!--                  <p type="button" class="btn btn-success" data-toggle="modalCreate" data-target="#modal">Lưu</p>-->
                 </div>
               </div>
             </div>
@@ -124,7 +110,6 @@
       </div>
       <div class="modal-body">
         <p>Bạn có muốn thêm cá thể mới cá thể</p>
-        <!--        <p>{{individual.id}}</p>-->
         <span style="color:red"></span>
       </div>
       <div class="modal-footer">
@@ -132,8 +117,8 @@
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         </div>
         <div class="btn-group">
-          <button type="submit" class="btn btn-success " (click)="onSubmit()" [routerLink]="['/individual/list']">Xác
-            nhận
+          <button type="submit" class="btn btn-success" data-bs-dismiss="modal" (click)="onSubmit()"
+                  [routerLink]="['/individual/list']">Xác nhận
           </button>
         </div>
       </div>
