--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-list/individual-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-list/individual-list.component.html
@@ -122,7 +122,7 @@
                   <div class="col-12 text-end">
                     <span class=" fst-italic mx-2" *ngIf="this.message">{{this.message}}</span>
                     <app-individual-create></app-individual-create>
-                    <button type="button" class="btn btn-success" (click)="openDialogFile()">Thêm nhiều</button>
+                    <button type="button" class="btn btn-success me-2" (click)="openDialogFile()">Thêm nhiều</button>
                   </div>
                 </div>
                 <div class="row">
@@ -148,11 +148,10 @@
                         <td class="text-center align-middle">{{individual.dateIn}}</td>
                         <td class="text-center align-middle">{{individual.dateOut}}</td>
                         <td class="text-center align-middle" *ngIf="individual.status == '1' ">Có bệnh</td>
-                        <td class="text-center align-middle" *ngIf="individual.status == '0' ">Không có bệnh</td>
+                        <td class="text-center align-middle" *ngIf="individual.status == '0' ">Không bệnh</td>
                         <td class="text-center align-middle">{{individual.weight}}</td>
                         <td class="align-middle text-center px-0">
                           <app-individual-edit [currentId]="individual.id"></app-individual-edit>
-                          <!--                          <button class="btn btn-warning btn-responsive-margin-bottom text-white"><i class="fas fa-edit"></i> Sửa</button>-->
                           <button class="btn btn-danger text-white mx-1" (click)="openDialogDelete(individual.id)" ><i class="fas fa-trash-alt"></i> Xóa</button>
                         </td>
                       </tr>
