--- a/C0721G2-livestock-farm-FE/src/app/component/cages/cages-create/cages-create.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/cages/cages-create/cages-create.component.html
@@ -11,8 +11,8 @@
 <div class="container register">
   <div class="row">
     <div class="col-md-3 register-left">
-      <img  src="https://fv9-2.failiem.lv/thumb_show.php?i=jp53m5a92&view" alt="" style="width: 100%"/>
-<!--      <img src="https://nongnghiepweb.files.wordpress.com/2017/04/cropped-leave-icon-png-106801.png" alt=""/>-->
+      <img src="https://fv9-2.failiem.lv/thumb_show.php?i=jp53m5a92&view" alt="" style="width: 100%"/>
+      <!--      <img src="https://nongnghiepweb.files.wordpress.com/2017/04/cropped-leave-icon-png-106801.png" alt=""/>-->
 
       <h3>Chào mừng đến với trang trại của chúng tôi</h3>
       <p></p>
@@ -94,10 +94,14 @@
               <div class="col-md-6">
                 <div class="form-group">
                   <label>Ngày tạo chuồng.</label>
-                  <input type="date"  class="form-control" formControlName="openDate"/>
+                  <input type="date" class="form-control" formControlName="openDate"/>
                   <div class="error error-text"
                        *ngIf="createCage.controls.openDate.dirty && createCage.controls.openDate.hasError('required') ">
                     Không được bỏ trống.
+                  </div>
+                  <div class="error error-text"
+                       *ngIf="createCage.controls.openDate.dirty && createCage.controls.openDate.hasError('checkDate')">
+                    Ngày khởi tạo chưa đúng.
                   </div>
                 </div>
                 <div class="form-group">
@@ -106,6 +110,10 @@
                   <div class="error error-text"
                        *ngIf="createCage.controls.closeDate.dirty && createCage.controls.closeDate.hasError('required') ">
                     Không được bỏ trống.
+                  </div>
+                  <div class="error error-text"
+                       *ngIf="createCage.controls.closeDate.dirty && createCage.controls.closeDate.hasError('checkDate')">
+                    Ngày đóng chuồng chưa đúng.
                   </div>
                 </div>
                 <div class="form-group">
@@ -129,9 +137,9 @@
                 </button>
                 <a class="btn btnBack" style="margin-right: 0px" [routerLink]="['/cage/list']">Quay lại
                 </a>
-<!--                <button class="btn btnBack" [routerLink]="['/cage/list']"-->
-<!--                        style="margin: 30px 0px 0px 30px; padding-left: 10px">Quay lại-->
-<!--                </button>-->
+                <!--                <button class="btn btnBack" [routerLink]="['/cage/list']"-->
+                <!--                        style="margin: 30px 0px 0px 30px; padding-left: 10px">Quay lại-->
+                <!--                </button>-->
               </div>
             </div>
           </form>
