--- a/C0721G2-livestock-farm-FE/src/app/component/cages/cages-edit/cages-edit.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/cages/cages-edit/cages-edit.component.html
@@ -12,7 +12,8 @@
 <div class="container register">
   <div class="row">
     <div class="col-md-3 register-left">
-      <img src="https://nongnghiepweb.files.wordpress.com/2017/04/cropped-leave-icon-png-106801.png" alt=""/>
+      <img  src="https://fv9-2.failiem.lv/thumb_show.php?i=jp53m5a92&view" alt="" style="width: 100%"/>
+      <!--      <img src="https://nongnghiepweb.files.wordpress.com/2017/04/cropped-leave-icon-png-106801.png" alt=""/>-->
       <h3>Chào mừng đến với trang trại của chúng tôi</h3>
     </div>
     <div class="col-md-9 register-right">
@@ -91,6 +92,10 @@
                        *ngIf="updateCage.controls.openDate.dirty && updateCage.controls.openDate.hasError('required') ">
                     Không được bỏ trống
                   </div>
+                  <div class="error error-text"
+                       *ngIf="updateCage.controls.openDate.dirty && updateCage.controls.openDate.hasError('checkDate')">
+                    Ngày khởi tạo chưa đúng.
+                  </div>
                 </div>
                 <div class="form-group">
                   <label>Ngày đóng chuồng.</label>
@@ -98,6 +103,10 @@
                   <div class="error error-text"
                        *ngIf="updateCage.controls.closeDate.dirty && updateCage.controls.closeDate.hasError('required') ">
                     Không được bỏ trống
+                  </div>
+                  <div class="error error-text"
+                       *ngIf="updateCage.controls.closeDate.dirty && updateCage.controls.closeDate.hasError('checkDate')">
+                    Ngày khởi tạo chưa đúng.
                   </div>
                 </div>
                 <div class="form-group">
