--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-list/individual-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-list/individual-list.component.html
@@ -84,30 +84,35 @@
                 <form class="row mt-5 mx-2 " (ngSubmit)="onSubmit()">
                   <div class="col-xxl-2 col-xl-4 col-md-6 mb-3">
                     <div class="input-group m-0">
-                      <input type="text" class="form-control " [(ngModel)]="individualId" [ngModelOptions]="{standalone: true}" placeholder="Mã cá thể">
+                      <input type="text" class="form-control " [(ngModel)]="individualId"
+                             [ngModelOptions]="{standalone: true}" placeholder="Mã cá thể">
                     </div>
                   </div>
                   <div class="col-xxl-2 col-xl-4 col-md-6 mb-3">
                     <div class="input-group m-0">
-                      <input type="text" class="form-control " [(ngModel)]="cageId" [ngModelOptions]="{standalone: true}" placeholder="Mã chuồng">
+                      <input type="text" class="form-control " [(ngModel)]="cageId"
+                             [ngModelOptions]="{standalone: true}" placeholder="Mã chuồng">
                     </div>
                   </div>
                   <div class="col-xxl-2 col-xl-4 col-md-6 mb-3">
                     <div class="input-group m-0">
-                      <input type="text" class="form-control " [(ngModel)]="dateIn" [ngModelOptions]="{standalone: true}" placeholder="Ngày nhập chuồng"
+                      <input type="text" class="form-control " [(ngModel)]="dateIn"
+                             [ngModelOptions]="{standalone: true}" placeholder="Ngày nhập chuồng"
                              onfocus="(this.type='date')"
                              onblur="(this.type='text')">
                     </div>
                   </div>
                   <div class="col-xxl-2 col-xl-4 col-md-6 mb-3">
                     <div class="input-group m-0">
-                      <input type="text" class="form-control " [(ngModel)]="dateOut"  [ngModelOptions]="{standalone: true}" placeholder="Ngày xuất chuồng"
+                      <input type="text" class="form-control " [(ngModel)]="dateOut"
+                             [ngModelOptions]="{standalone: true}" placeholder="Ngày xuất chuồng"
                              onfocus="(this.type='date')"
                              onblur="(this.type='text')">
                     </div>
                   </div>
                   <div class="col-xxl-2 col-xl-4 col-md-6 mb-3">
-                    <select class="form-select" [(ngModel)]="status" [ngModelOptions]="{standalone: true}" aria-label="Default select example">
+                    <select class="form-select" [(ngModel)]="status" [ngModelOptions]="{standalone: true}"
+                            aria-label="Default select example">
                       <option value="">Tình trạng</option>
                       <option value="1">Có bệnh</option>
                       <option value="0">Không có bệnh</option>
@@ -130,7 +135,9 @@
                     <table class="table table-striped table-hover container-fluid">
                       <thead class="text-white bg-success">
                       <tr class=" text-start">
-                        <th class="text-center " ><a (click)="sort('id')" class="cursor-pointer text-decoration-none text-white">Mã cá thể</a></th>
+                        <th class="text-center "><a (click)="sort('id')"
+                                                    class="cursor-pointer text-decoration-none text-white">Mã cá thể</a>
+                        </th>
                         <th class="text-center">Mã chuồng</th>
                         <th class="text-center">Loại chuồng</th>
                         <th class="text-center">Ngày nhập chuồng</th>
@@ -152,7 +159,9 @@
                         <td class="text-center align-middle">{{individual.weight}}</td>
                         <td class="align-middle text-center px-0">
                           <app-individual-edit [currentId]="individual.id"></app-individual-edit>
-                          <button class="btn btn-danger text-white mx-1" (click)="openDialogDelete(individual.id)" ><i class="fas fa-trash-alt"></i> Xóa</button>
+                          <button class="btn btn-danger text-white mx-1" (click)="openDialogDelete(individual.id)"><i
+                            class="fas fa-trash-alt"></i> Xóa
+                          </button>
                         </td>
                       </tr>
                       </tbody>
@@ -162,8 +171,11 @@
                     <ul class="d-flex pagination pagination-sm justify-content-end " style="margin:20px 0">
                       <div *ngIf="this.page >0 then previous"></div>
                       <ng-template #previous>
-                        <li class="page-item"><button class="page-link bg-success" style="; color: white" (click)="previousClick()">Trước
-                          đó</button></li>
+                        <li class="page-item">
+                          <button class="page-link bg-success" style="; color: white" (click)="previousClick()">Trước
+                            đó
+                          </button>
+                        </li>
                       </ng-template>
                       <li class="page-item">
                         <input class="page-link" type="number" value="1" min="1" [max]="totalPages"
@@ -175,8 +187,11 @@
                       </li>
                       <div *ngIf="this.page  < this.totalPages-1 then next "></div>
                       <ng-template #next>
-                        <li class="page-item"><button class="page-link bg-success" style="color: white" (click)="nextClick()">Tiếp
-                          theo</button></li>
+                        <li class="page-item">
+                          <button class="page-link bg-success" style="color: white" (click)="nextClick()">Tiếp
+                            theo
+                          </button>
+                        </li>
                       </ng-template>
                     </ul>
                   </div>
